    + [BR] Add usrmerge test from Marco d'Itri.  (Closes: #767754).
  * checks/watch-file.{desc,pm}:
    + [BR] Apply patch from Chris Lamb <lamby@debian.org>,
      warn if debian/watch uses deprecated
      githubredir.debian.net scraper (Closes: #803106).
    + [NT] Apply patch from Dmitry Shachnev <mitya57@debian.org> to
      remove obsolete check.  (Closes: #793149)

  * data/spelling/corrections*:
    + [JW] Add more corrections.
      Thanks to Paul Wise for patch for one of them.

  * debian/control:
    + [NT] Add ${perl:Depends} to Depends.
  * debian/rules:
    + [NT] Convert to dh7 style build.

  * lib/Lintian/Check.pm:
    + [JW] Remove work-around for Email::Valid bug (#663663), which is now
      fixed even in oldstable.
    + [JW] Apply patch from Justin B Rye to fix an uninitialized value
      warning.  (Closes: #810649)

  * reporting/html_reports:
    + [JW] Add missing "map_maintainer" call, which made the reporting
      script omit packages on maintainer's pages.  Thanks to Charles
      Plessy for the report and to Dr. Tobias Quathamer for finding
      the condition for triggering the bug.  (Closes: #797178)
    + [NT] Share more data for a ~15% memory reduction on an old
      dataset.

  * t:
    + [NT] Fix test case relying on removed debhelper compat level.
      (Closes: #811309)

 -- Niels Thykier <niels@thykier.net>  Sun, 27 Dec 2015 09:43:24 +0000

lintian (2.5.39.1) unstable; urgency=medium

  * checks/menu-format.desc:
    + [NT] Clarify how to handle a command listed both in a menu file
      and a desktop file.  Thanks to Jörg Frings-Fürst for reporting.
      (Closes: #806387)

  * data/binaries/embedded-libs:
    + [JW] Fix typo in the string used for detecting copies of OpenJPEG.
      (But continue to recognize the misspelled variant, which might be
      still present in some copies.)
  * data/fields/udeb-fields:
    + [NT] Add Auto-Built-Package and Build-Ids fields.  Thanks to