@@ -36,7 +36,7 @@ Certainty: certain
 Ref: uscan(1)
 Info: The <tt>version=</tt> line in the <tt>debian/watch</tt> file in this
  package declares an unknown version.  The currently known watch file
- versions are 2 and 3.
+ versions are 2, 3 and 4
 
 Tag: debian-watch-file-missing-version
 Severity: normal
